Centered Staff credits Fixed issue where staff credits would overflow on resize

--- a/css/staff.css
+++ b/css/staff.css
@@ -15,9 +15,9 @@ h1{
     padding-top: 0.5em;
 }
 .credits{
-    white-space: pre;
+    white-space: initial;
     font-size: 25px;
-    text-align: left;
+    text-align: center;
 }
 .gallery{
     display: grid;
